--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rneui/themed": "^4.0.0-rc.5",
     "react": "18.0.0",
     "react-native": "0.69.2",
+    "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
